--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.2.0",
     "gulp-less": "^3.0.3",
+    "gulp-replace": "^0.5.3",
     "gulp-sourcemaps": "^1.5.2"
   },
   "repository": {
